fix jerky animation on mobile menu collapse

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -153,9 +153,7 @@ body {
   height: 9.5rem;
 }
 
-.collapsing {
-  min-height: 1.6rem;
-}
+
 
 #contactUsContainer {
   @media (max-width: 768px) {
